--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-custom-control": "^1.4.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
