--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.120",
     "@types/react": "^18.3.12",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.3.1",
     "leaflet": "^1.9.4",
     "leaflet-lasso": "^2.2.13",
     "leaflet-routing-machine-custom": "^3.2.17",
     "material-timeline": "^1.0.4",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
