--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@types/react-dom": "^18.3.1",
     "leaflet": "^1.9.4",
     "leaflet-lasso": "^2.2.13",
+    "leaflet-routing-machine": "^3.2.12",
     "leaflet-routing-machine-custom": "^3.2.17",
+    "leaflet.markercluster": "^1.5.3",
     "material-timeline": "^1.0.4",
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-custom-control": "^1.4.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.28.0",
