--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "@mui/icons-material": "latest",
     "@mui/lab": "latest",
     "@mui/material": "latest",
-    "@react-three/drei": "^10.0.6",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^9.90.2",
+    "@react-three/fiber": "^8.15.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/boolean-point-in-polygon": "^7.2.0",
+    "@turf/distance": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
     "@types/jest": "^27.5.2",
     "@types/react": "^18.3.12",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.3.1",
     "antd": "^5.24.8",
+    "convex-hull": "^1.0.3",
     "leaflet": "^1.9.4",
     "leaflet-lasso": "^2.2.13",
     "leaflet-routing-machine": "^3.2.12",
@@ -37,7 +41,7 @@
     "react-leaflet-custom-control": "^1.4.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.28.0",
-    "three": "^0.176.0",
+    "three": "^0.153.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.3"
